# snapcraft-examples

./: .gitignore  .gitmodules  README.md  pyproject.toml
applications/alacritty/: config.toml
applications/android-studio/: config.toml
examples/conda/: hello
examples/conda/snap/: snapcraft.yaml
examples/crystal/snap/: snapcraft.yaml
examples/existing-binary/: myapp
examples/existing-binary/snap/: snapcraft.yaml
examples/git-local-repository/: runner.sh
examples/git-local-repository/snap/: snapcraft.yaml
examples/go/snap/: snapcraft.yaml
examples/meson/: meson.build
examples/meson/snap/: snapcraft.yaml
examples/npm/snap/: snapcraft.yaml
examples/pkg-config/: CMakeLists.txt
examples/pkg-config/snap/: snapcraft.yaml
examples/pkg-config/src/: hello-world.cpp
examples/rust/snap/: snapcraft.yaml
examples/source-subdir/snap/: snapcraft.yaml
src/snapcraft_examples/: applications.py  cli.py
