[project]
name = "snapcraft-examples"
version = "0.0.1"
authors = [{name="Callahan Kovacs", email="callahankovacs@gmail.com"}]
maintainers = [{name="Callahan Kovacs", email="callahankovacs@gmail.com"}]
description="Example and real-world snapcraft.yaml configurations."
keywords = ["snapcraft", "yaml", "example", "configuration", "reference"]
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Development Status :: 4 - Beta",
]

[project.urls]
"Homepage" = "https://github.com/mr-cal/snapcraft-examples"
"Bug Tracker" = "https://github.com/mr-cal/snapcraft-examples/issues"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
snapcraft-examples = "snapcraft_examples.cli:main"
